[package]
name = "tmoe-linux-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
crossterm = "0.28"
colored = "2.1"
which = "6.0"
regex = "1.10"
home = "0.5"
chrono = "0.4"
uuid = { version = "1.10", features = ["v4"] }
